--- a/css/style.css
+++ b/css/style.css
@@ -1092,7 +1092,6 @@ ul.top_icon li a {
 }
 
 
-}
 .main-menu ul li:last-child a {
      padding-right: 0;
 }
@@ -1637,7 +1636,7 @@ input[type="radio"] .styled:checked+label::after {
      position: relative;
 }
 .banner-main img{
-     height: 100%;
+     height: 600px;
      width: 100%;
 }
 .banner-main .text-bg h1 {
@@ -1777,11 +1776,13 @@ input[type="radio"] .styled:checked+label::after {
      justify-content: center;
 }
 .about .about-box p {
-     font-size: 17px;
+     font-weight: bolder;
+     text-align: center;
+     font-size: 20px;
      line-height: 32px;
      color: #141012;
      position: relative;
-     margin: 50px auto;
+     margin: 50px ;
      display: inline-block;
      padding: 60px 25px;
      border-left: 15px solid #077f9b;
@@ -1803,17 +1804,17 @@ input[type="radio"] .styled:checked+label::after {
 }
 .about .about-box p span {
      display: inline-block;
-     padding-right: 360px;
+     /* padding-right: 360px; */
 }
-.pune-img-area {
+/* .pune-img-area {
      position: absolute;
-     top: -10px;
+     top: -40px;
      right: 40px;
 }
 .pune-img-area img{
      height: 450px;
      width: 400px;
-}
+} */
 .about a {
      width: 200px;
      font-size: 17px;
@@ -1865,7 +1866,7 @@ input[type="radio"] .styled:checked+label::after {
      margin-left: 15px;
 }
 .titlepage h2::before,
-. .titlepage h2::after {
+ .titlepage h2::after {
      content: "";
      position: absolute;
      height: 5px;
@@ -1877,7 +1878,12 @@ input[type="radio"] .styled:checked+label::after {
      padding: 0px 5px 0px 5px;
      text-align: center;
 }
+.traveling-box img{
+     height: 50%;
+     width: 50%;
+}
 .traveling-box h3 {
+     font-weight: bolder;
      padding-top: 20px;
      font-size: 25px;
      line-height: 31px;
@@ -1906,10 +1912,10 @@ input[type="radio"] .styled:checked+label::after {
 .traveling-box .read-more a:hover {
      background: #15cfe5;
 }
-.London {
+.Pune {
      background-color: #fff;
 }
-.London .titlepage {
+.Pune .titlepage {
      text-align: center;
      padding-bottom: 54px;
 }
@@ -1946,10 +1952,13 @@ input[type="radio"] .styled:checked+label::after {
      top: 27px;
      width: 149px;
 }
-.London-img {
+.Pune-img {
      margin: 0 -15px;
 }
-.London .London-img figure {
+.Pune .Pune-img img {
+     /* object-fit: fill; */
+     height: 400px;
+     width: 100%;
      margin: 0px;
 }
 .Tours {
@@ -1993,6 +2002,10 @@ input[type="radio"] .styled:checked+label::after {
      top: 27px;
      width: 149px;
 }
+.item img{
+     height: 300px;
+     width: 200px;
+}
 .item h3 {
      font-size: 20px;
      line-height: 29px;
@@ -2015,18 +2028,21 @@ input[type="radio"] .styled:checked+label::after {
      margin: 0px 5px;
 }
 .amazing {
-     background: url(../images/Amazing.jpg);
+     background: url(../images/tour.jpg);
      padding: 90px 0px;
      background-size: 100% 100%;
      background-repeat: no-repeat;
      background-position: center center;
 }
 .amazing .amazing-box {
+     padding: 10px;
+     border-radius: 30px;
+     background-color: #00000068;
      text-align: center;
 }
 .amazing .amazing-box h2 {
      padding: 0px 0px 20px 0px;
-     font-size: 45px;
+     font-size: 50px;
      font-weight: bold;
      color: #fff;
      line-height: 50px;
@@ -2034,7 +2050,8 @@ input[type="radio"] .styled:checked+label::after {
 }
 .amazing .amazing-box span {
      color: #fff;
-     font-size: 17px;
+     font-weight: bold;
+     font-size: 20px;
      line-height: 32px;
      display: inline-block;
      margin-bottom: 35px;
